Fixed broken nav bar on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,3 +35,8 @@ h3 {
 .card .card-content .card-title {
     display: inline;
 }
+
+
+.nav-color {
+    color: white;
+}
